fix: z-index button

--- a/css/home/home.css
+++ b/css/home/home.css
@@ -4,7 +4,7 @@
   box-shadow: inset 0 -90px var(--white-primary);
   position: relative;
   overflow: hidden;
-  z-index: -1;
+  z-index: 1;
 }
 
 .bg-gradient {
@@ -41,9 +41,11 @@
 .main__content__text {
   align-self: center;
   padding-bottom: 200px;
+  z-index: 999;
 }
 
-.main__content__text img {
+.main__content__text img,
+.main__content__text a {
   z-index: 999;
 }
 
